<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8sdp"
    tools:context=".ui.competitionDetails.CompetitionDetailsFragment">

    <ImageView
        android:id="@+id/emblemImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ball" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emblemImageView" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_regular"
        android:text="@string/type"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/typeValueTextView"
        style="@style/valueTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/typeTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/areaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_regular"
        android:text="@string/area"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <TextView
        android:id="@+id/areaValueTextView"
        style="@style/valueTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/areaTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <ImageView
        android:id="@+id/areaImageView"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/areaValueTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <TextView
        android:id="@+id/planTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_regular"
        android:text="@string/plan"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areaTextView" />

    <TextView
        android:id="@+id/planValueTextView"
        style="@style/valueTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/planTextView"
        app:layout_constraintTop_toBottomOf="@+id/areaTextView" />


    <TextView
        android:id="@+id/startDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_medium"
        android:text="@string/start_date"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planTextView" />

    <TextView
        android:id="@+id/startDateValueTextView"
        style="@style/valueTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/startDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/planTextView" />

    <TextView
        android:id="@+id/endDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_regular"
        android:text="@string/end_date"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateTextView" />

    <TextView
        android:id="@+id/endDateValueTextView"
        style="@style/valueTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/endDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/startDateTextView" />


    <TextView
        android:id="@+id/matchdayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_regular"
        android:text="@string/matchday"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateTextView" />

    <TextView
        android:id="@+id/matchdayValueTextView"
        style="@style/valueTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/matchdayTextView"
        app:layout_constraintTop_toBottomOf="@+id/endDateTextView" />

    <TextView
        android:id="@+id/numberOfAvailableSeasonsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/alexandria_regular"
        android:text="@string/numberofavailableseasons"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchdayTextView" />

    <TextView
        android:id="@+id/numberOfAvailableSeasonsValueTextView"
        style="@style/valueTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/numberOfAvailableSeasonsTextView"
        app:layout_constraintTop_toBottomOf="@+id/matchdayTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>